index_1st_cem.html

--- a/index_1st_cem.html
+++ b/index_1st_cem.html
@@ -4,7 +4,7 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="E:\My Projects\style_1st_cem.css">
+     <link rel="stylesheet" href="style_1st_cem.css">
      <title>Первый семестр</title>
 
 </head>
@@ -14,7 +14,7 @@
           <h1>Миска рис</h1>
           <div id="infLogo">
                <div>
-                    <img src="C:\Users\golde\Downloads\39_85225.png" alt="Логотип" width="60px" />
+                    <img src="39_85225.png" alt="Логотип" width="60px" />
                </div>
                <div>
                     <p>Группа ЭФБО-06-23</p>
@@ -24,11 +24,11 @@
           <nav>
                <ul>
                     <div id="navig">
-                         <a href="E:\My Projects\.vscode\index.html">Главная</a>
-                         <a href="E:\My Projects\.vscode\index_1st_cem.html">Первый семестр</a>
-                         <a href="E:\My Projects\.vscode\index_testplate.html">Второй семестр</a>
-                         <a href="E:\My Projects\.vscode\index_uslugi.html">Услуги</a>
-                         <a href="E:\My Projects\.vscode\index3.html">Авторизация</a>
+                         <a href="index.html">Главная</a>
+                         <a href="index_1st_cem.html">Первый семестр</a>
+                         <a href="index_testplate.html">Второй семестр</a>
+                         <a href="index_uslugi.html">Услуги</a>
+                         <a href="index3.html">Авторизация</a>
                     </div>
                     </div>
                </ul>
@@ -219,11 +219,11 @@
      <p>&copy; Постарнаков Станислав Владимирович, 2024.</p>
      <ul class="social-links">
           <a href="https://vk.com/erick_teodor_cartman" target="_blank" rel="noopener noreferrer"><img
-                    src="C:\Users\golde\Downloads\iconfinder-social-media-applications-32vk-4102593_113806.png"
+                    src="iconfinder-social-media-applications-32vk-4102593_113806.png"
                     alt="vkontakte" /></a>
      </ul>
 </footer>
-<script src = "E:\My Projects\.vscode\table.js"></script>
+<script src = "table.js"></script>
 </body>
 
 </html>
