--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <header>
     <div id="infLogo">
       <div>
-        <img src="C:\Users\golde\Downloads\39_85225.png" alt="Логотип" width="60px" />
+        <img src="39_85225.png" alt="Логотип" width="60px" />
       </div>
       <div>
         <p>Группа ЭФБО-06-23</p>
@@ -57,7 +57,7 @@
 
     <nav class="navbar navbar-expand-lg" style="background-color: crimson">
       <div class="container-fluid">
-        <a class="navbar-brand" href="E:\My Projects\.vscode\index.html" style="color: rgb(255, 255, 0)">Главная</a>
+        <a class="navbar-brand" href="index.html" style="color: rgb(255, 255, 0)">Главная</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
           <span class="navbar-toggler-icon"></span>
@@ -71,18 +71,18 @@
                 Обучение
               </a>
               <ul class="dropdown-menu" style="background-color: crimson;">
-                <li><a class="dropdown-item" href="E:\My Projects\.vscode\index_1st_cem.html" style="color: rgb(255, 255, 0)">Первый
+                <li><a class="dropdown-item" href="index_1st_cem.html" style="color: rgb(255, 255, 0)">Первый
                     семестр</a></li>
-                <li><a class="dropdown-item" href="E:\My Projects\.vscode\index_testplate.html?utm_source=China is the best country!!!" style="color: rgb(255, 255, 0)">Второй
+                <li><a class="dropdown-item" href="index_testplate.html?utm_source=China is the best country!!!" style="color: rgb(255, 255, 0)">Второй
                     семестр</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="E:\My Projects\.vscode\index_uslugi.html"
+              <a class="nav-link" href="index_uslugi.html"
                 style="color: rgb(255, 255, 0)">Услуги</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="E:\My Projects\.vscode\index3.html"
+              <a class="nav-link" href="index3.html"
                 style="color: rgb(255, 255, 0)">Авторизация</a>
             </li>
           </ul>
@@ -113,8 +113,8 @@
                   Навигация
                 </a>
                 <ul class="dropdown-menu" style="background-color: crimson;">
-                  <li><a class="dropdown-item" href="#" style="color: rgb(255, 255, 0)">Фронтенд</a></li>
-                  <li><a class="dropdown-item" href="#" style="color: rgb(255, 255, 0)">Бэкенд</a></li>
+                  <li><a class="dropdown-item" href="#frontend" style="color: rgb(255, 255, 0)">Фронтенд</a></li>
+                  <li><a class="dropdown-item" href="#backend" style="color: rgb(255, 255, 0)">Бэкенд</a></li>
                   <li><a class="dropdown-item" href="#" style="color: rgb(255, 255, 0)">Ссылка на Создателя Страницы
                     </a></li>
                 </ul>
@@ -129,7 +129,7 @@
     <div class="info">
       <h2>Добро пожаловать на мой сайт</h2>
       <p id ="textParagraph">Меня зовут Постарнаков Станислав Владимирович и я начинающий специалист по веб-разработке. </p>
-      <img class = "Mao" src="E:\i.webp" alt="Фронтэнд и бэкенд" id ="Mao"/>
+      <img class = "Mao" src="i.webp" alt="Фронтэнд и бэкенд" id ="Mao"/>
     </div>
     <div class="frontend" id="frontend">
       <h2>Фронтенд</h2>
@@ -164,11 +164,11 @@
       <p>&copy; Постарнаков Станислав Владимирович, 2024.</p>
       <div class="social-links" id="social-links">
         <a href="https://vk.com/erick_teodor_cartman" target="_blank" rel="noopener noreferrer"><img
-            src="C:\Users\golde\Downloads\iconfinder-social-media-applications-32vk-4102593_113806.png"
+            src="iconfinder-social-media-applications-32vk-4102593_113806.png"
             alt="vkontakte" /></a>
       </div>
     </footer>
-    <script src = "E:\My Projects\.vscode\photo.js"></script>
+    <script src = "photo.js"></script>
   </body>
 </body>
 
