--- a/index3.html
+++ b/index3.html
@@ -27,16 +27,16 @@
   <input class="knopka" type="submit" value="Отправить">
 </form>
 
-<script src="script.js"></script>  <!--  Подключите этот javascript файл -->
+<script src="script.js"></script> 
 
            <footer>
             <p>&copy; Постарнаков Станислав Владимирович, 2024.</p>
             <ul class="social-links">
-            <a href="https://vk.com/erick_teodor_cartman" target="_blank" rel="noopener noreferrer"><img src="C:\Users\golde\Downloads\iconfinder-social-media-applications-32vk-4102593_113806.png" alt="vkontakte"
+            <a href="https://vk.com/erick_teodor_cartman" target="_blank" rel="noopener noreferrer"><img src="iconfinder-social-media-applications-32vk-4102593_113806.png" alt="vkontakte"
            /></a>
             </ul>
             </footer>
         </body>
 </html>
-<form action="E:\My Projects\index.html" method="post">
+<form action="index.html" method="post">
   
