index_testplate.html

--- a/index_testplate.html
+++ b/index_testplate.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-<script src = "E:\My Projects\.vscode\video.js"></script>
-<link rel="stylesheet" href="E:\My Projects\style_testplate.css">
+<script src = "video.js"></script>
+<link rel="stylesheet" href="style_testplate.css">
 </head>
 <body>
   <h1 id = 'text_1' style="color: yellow;">Добро пожаловать!</h1>
   <img src="https://i.playground.ru/p/zkJ7AaaJWsZapotrB1EzbQ.jpeg" alt="Фронтэнд и бэкенд" id ="roatingImage"/>
- <script src = "E:\My Projects\.vscode\video.js"></script>
+ <script src = "video.js"></script>
 </body>
 </html>
 
